Created cpp class

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -1,8 +1,10 @@
-# add_library(cpp_sockets
-# # client.cpp
-# # server.cpp
-# )
-# target_link_libraries( cpp_sockets ${OpenCV_LIBS})
+include_directories(include)
 
-add_executable(client_cpp client.cpp)
-# target_link_libraries(test_realsense_manager ${OpenCV_LIBS})  # If image sending capabilities
+add_library(cpp_sockets
+    src/client.cpp
+# server.cpp
+)
+# target_link_libraries( cpp_sockets ${OpenCV_LIBS})  # If image sending capabilities
+
+add_executable(cpp_client_test cpp_client_test.cpp)
+target_link_libraries(cpp_client_test cpp_sockets)
