--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
 endif(NOT CMAKE_BUILD_TYPE)
 
-find_package(OpenCV 3.3.1 EXACT REQUIRED) # Transfer images (no need to be 3.3.1)
+find_package(OpenCV REQUIRED) # Transfer images (no need to be 3.3.1)
 
 include_directories(cpp/include)
 add_subdirectory(cpp)
